Improve biome coherency and river beds