@@ -12,9 +12,9 @@ import java.util.List;
 public class DeepLukewarmOcean extends BiomeRepresentation {
 
     private static final HashMap<BiomeLayers, List<Material>> layers = new HashMap<>() {{
-        put(BiomeLayers.SURFACE, List.of(Material.GRASS_BLOCK));
-        put(BiomeLayers.PRIMARY, List.of(Material.DIRT));
-        put(BiomeLayers.SECONDARY, Arrays.asList(Material.COAL_ORE, Material.IRON_ORE, Material.REDSTONE_ORE, Material.LAPIS_ORE, Material.GOLD_ORE, Material.DIAMOND_ORE));
+        put(BiomeLayers.SURFACE, List.of(Material.WATER));
+        put(BiomeLayers.PRIMARY, List.of(Material.WATER));
+        put(BiomeLayers.SECONDARY, Arrays.asList(Material.STONE, Material.COAL_ORE, Material.IRON_ORE, Material.REDSTONE_ORE, Material.LAPIS_ORE, Material.GOLD_ORE, Material.DIAMOND_ORE));
         put(BiomeLayers.BASE, List.of(Material.BEDROCK));
     }};
     public DeepLukewarmOcean() {
